# jcoral

./: CMakeLists.txt  README.md  coral_version.txt  dsb_version.txt
cpp/: CMakeLists.txt  common_types.hpp  fmi_FMU.cpp  fmi_Importer.cpp  jni_helpers.hpp  master_Execution.cpp  master_ProviderCluster.cpp  native.cpp  slave_InProcessRunner.cpp  slave_InstanceFactory.cpp  slave_NetworkedRunner.cpp  slave_OpaqueInstance.cpp  type_converters.hpp
java/: CMakeLists.txt
java/com/sfh/dsb/: Causality.java  DataType.java  DomainController.java  DomainLocator.java  EntityNotFoundException.java  ExecutionController.java  ExecutionLocator.java  Future.java  ModelBuilder.java  ModelConstructionException.java  ModelSlaveMap.java  ScalarValue.java  ScenarioBuilder.java  ScenarioEvent.java  SimulationProgressMonitor.java  SlaveID.java  SlaveLocator.java  SlaveProviderProcessBuilder.java  Variability.java  Variable.java  VariableDescription.java  VariableSetting.java
java/com/sfh/util/: ProcessCapture.java  ProcessOutput.java
java/no/viproma/coral/: Logging.java
java/no/viproma/coral/fmi/: FMIVersion.java  FMU.java  Importer.java
java/no/viproma/coral/master/: AddedSlave.java  EntityNotFoundException.java  Execution.java  ExecutionOptions.java  ModelBuilder.java  ModelConstructionException.java  ModelSlaveMap.java  ProviderCluster.java  ScenarioBuilder.java  ScenarioEvent.java  SimulationProgressMonitor.java  SlaveConfig.java
java/no/viproma/coral/model/: Causality.java  DataType.java  ScalarValue.java  SlaveID.java  SlaveTypeDescription.java  Variability.java  Variable.java  VariableDescription.java  VariableSetting.java
java/no/viproma/coral/net/: SlaveLocator.java
java/no/viproma/coral/provider/: SlaveProviderProcessBuilder.java
java/no/viproma/coral/slave/: InProcessRunner.java  Instance.java  InstanceFactory.java  NetworkedRunner.java  OpaqueInstance.java
java/no/viproma/util/: ProcessCapture.java  ProcessOutput.java
src/cpp/: jdsb.cpp
src/java/com/sfh/dsb/: DataType.java  DomainController.java  Variability.java
tests/: A.java  CMakeLists.txt  DomainControllerTest.java  DomainLocatorErrorTest.java  ExecutionControllerTest.java  ExecutionTest.java  InProcessExecutionTest.java  ListSlaveTypeInfo.java  ModelBuilderTest.java  NetworkedExecutionTest.java  ProcessCaptureTest.java  SineScenarioTest.java
tests/data/: identity.fmu  sine.fmu
tests/data/sine_fmu_unpacked/: modelDescription.xml
tests/data/sine_fmu_unpacked/sources/: sine-fmu-uuid.h
